--- a/index.css
+++ b/index.css
@@ -10,15 +10,15 @@
     --large: 1.6vw;
 }
 
-#perfil, #education, #experience, #contact{
-    display: none;
-}
-
 .header{
-    height: 8vh;
+    height: 4vw;
     width: 100%;
     display: flex;
     box-shadow: 1px 1px 5px 1px gray;
+    position: fixed;
+    top: 0;
+    background-color: white;
+    z-index: 1;
 }
 
 .header__title{
@@ -64,12 +64,76 @@
 }
 
 .main{
-    margin-top: 16px;
+    margin-top: 6vw;
 }
 
-.main-view{
+.main__presentation{
+    width: 90%;
+    margin: 0 auto;
+    position: relative;
+}
+
+.main__presentation-image{
     width: 100%;
-    height: 150vh; 
-    /* Validar ese tamaño */
-    display: block;
+    box-shadow: 1px 1px 5px 1px gray;
+}
+
+.main__presentation-title{
+    position: absolute;
+    top: 70%;
+    left: 25%;
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 3.5vw;
+    border-bottom: 1px solid white;
+}
+
+.main__presentation-description{
+    position: absolute;
+    top: 82%;
+    left: 43%;
+    color: white;
+    font-weight: bold;
+    font-size: 1vw;
+}
+
+.content__perfil{
+    width: 90%;
+    margin: 70px auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+}
+
+.perfil__image{
+    width: 55%;
+    margin-left: 7vw;
+}
+
+.perfil__image-image{
+    width: 80%;
+    box-shadow: 1px 1px 5px 1px gray;
+}
+
+.perfil__description{
+    position: absolute;
+    background-color: white;
+    left: 40vw;
+    width: 50%;
+    height: 60%;
+    border: 1px solid gray;
+    padding: 2% 3%;
+    box-shadow: 1px 2px 5px 1px gray;
+}
+
+.perfil__description-text{
+    font-size: 1vw;
+    text-align: justify;
+}
+
+@media screen and (max-width: 1400px) {
+    .perfil__description-text{
+        font-size: 1.1vw;
+    }
 }
