Creación de la estructura de la sección 'Educación'

--- a/index.css
+++ b/index.css
@@ -132,6 +132,35 @@
     text-align: justify;
 }
 
+.main__education{
+    margin: 100px 0;
+}
+
+.education__titles{
+    display: flex;
+    justify-content: space-around;
+}
+
+.education__title{
+    width: 15vw;
+    height: 15vw;
+    border: 1px solid black;
+    border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.education__title-image{
+    width: 100%;
+    object-fit: cover;
+}
+
+.education__title-image:hover{
+    display: none;
+}
+
 @media screen and (max-width: 1400px) {
     .perfil__description-text{
         font-size: 1.1vw;
