--- a/index.css
+++ b/index.css
@@ -150,15 +150,44 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
+}
+
+.education__title:hover{
+    transition: box-shadow 0.3s ease;
+    box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.3);
 }
 
 .education__title-image{
     width: 100%;
     object-fit: cover;
+    z-index: 2;
+    position: relative;
+    transition: opacity 0.5s ease; 
 }
 
-.education__title-image:hover{
-    display: none;
+.title__info{
+    height: 100%;
+    width: 100%;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    position: absolute;
+    z-index: 1;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+}
+
+.education__title:hover .title__info{
+    opacity: 1;
+    z-index: 2;
+}
+
+.education__title:hover .education__title-image{
+    opacity: 1;
+    z-index: 1;
 }
 
 @media screen and (max-width: 1400px) {
