--- a/index.css
+++ b/index.css
@@ -18,7 +18,7 @@
     position: fixed;
     top: 0;
     background-color: white;
-    z-index: 1;
+    z-index: 100;
 }
 
 .header__title{
@@ -194,4 +194,19 @@
     .perfil__description-text{
         font-size: 1.1vw;
     }
+}
+
+.education__certifications{
+    display: grid;
+    grid-template-columns: minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr) minmax(100px, 1fr);
+    grid-auto-rows: 250px;
+}
+
+.education__item{
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    margin: 20px;
 }
