--- a/index.css
+++ b/index.css
@@ -262,3 +262,67 @@
 .education__experience-description:nth-child(5){
     border-right: none;
 }
+
+.main_email-body{
+    width: 50vw;
+    margin: 0 auto;
+    border: 1px solid #1D3557;
+    box-shadow: 1px 1px 1px 1px gray;
+}
+
+.main_email-form{
+    padding: 2vh 5vw;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.main_email-subject{
+    padding: 1%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif
+}
+
+.main_email-textarea{
+    padding: 1%;
+    resize: none;
+}
+
+.main_email-subject:focus, .main_email-textarea:focus{
+    outline: none;
+}
+
+.main_email-button{
+    width: 10vw;
+    padding: 1%;
+    font-size: auto;
+    margin: 0 auto;
+}
+
+.footer{
+    margin-top: 100px;
+    background-color: black;
+}
+
+.footer_container-developer, .footer_container-email{
+    color: white;
+}
+
+.footer_container{
+    width: 50vw;
+    height: 15vh;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.footer_container-links{
+    display: flex;
+    width: 8%;
+}
+
+.footer_container-image{
+    width: 100%;
+    height: 100%;
+}
